--- a/DESTINATIONS/style.css
+++ b/DESTINATIONS/style.css
@@ -854,6 +854,7 @@ section.filters-section,
     display: flex;
     flex-direction: column;
     height: 480px;
+    width: 100%;
 }
 
 .destination-card:hover {
